# percolator

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  main.rs  output.rs
docs/operations/: MONITORING.md  RUNBOOK.md
frontend/: .env.local.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/trade/: page.tsx
frontend/src/components/: providers.tsx
frontend/src/components/trading/: AccountPanel.tsx  Chart.tsx  Header.tsx  MarketSelector.tsx  OrderBook.tsx  OrderForm.tsx  Positions.tsx  RecentTrades.tsx  index.ts
frontend/src/hooks/: usePercolator.ts
frontend/src/lib/: percolator.ts  utils.ts
frontend/src/store/: trading.ts
programs/common/src/: error.rs
programs/router/src/instructions/: cpi.rs  execute_cross_slab.rs  initialize.rs  initialize_portfolio.rs  liquidation.rs  mod.rs  multi_slab.rs  portfolio_margin.rs
programs/router/src/state/: portfolio.rs  registry.rs
programs/slab/src/: entrypoint.rs
programs/slab/src/instructions/: add_instrument.rs  batch_open.rs  cancel.rs  commit.rs  funding.rs  initialize.rs  initialize_test.rs  insurance.rs  liquidation.rs  mod.rs  reserve.rs
programs/slab/src/state/: header.rs  insurance.rs  mod.rs  slab.rs
scripts/: deploy-local.sh  start-validator.sh
scripts/monitoring/: alert_handler.sh  health_check.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: client.rs  constants.rs  error.rs  instructions.rs  lib.rs  pda.rs  types.rs
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: client.ts  constants.ts  index.ts  instructions.ts  pda.ts  types.ts
src/: lib.rs
tests/: README.md  benchmark_cu.rs  chaos_soak.rs  cu_measurement.rs  fuzz_instructions.rs  integration_multi_slab.rs  integration_reserve_commit.rs  property_invariants.rs  v0_capital_efficiency.rs  v0_commit_fill.rs  v0_execute_cross_slab.rs
tests/common/: mod.rs
