[package]
name = "percolator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[workspace]
resolver = "2"
members = [
    "programs/router",
    "programs/slab",
    "programs/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dc199411/percolator"

[workspace.dependencies]
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.3.0"
proptest = "1.4"
solana-program = "2.1"
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["full"] }

[dependencies]
percolator-common = { path = "programs/common" }

[dev-dependencies]
solana-program-test = "2.1"
solana-sdk = "2.1"
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros"] }
proptest = "1.4"

[[test]]
name = "cu_measurement"
path = "tests/cu_measurement.rs"

[[test]]
name = "integration_reserve_commit"
path = "tests/integration_reserve_commit.rs"

[[test]]
name = "integration_portfolio"
path = "tests/integration_portfolio.rs"

[[test]]
name = "integration_anti_toxicity"
path = "tests/integration_anti_toxicity.rs"

[[test]]
name = "property_invariants"
path = "tests/property_invariants.rs"

[[test]]
name = "v0_capital_efficiency"
path = "tests/v0_capital_efficiency.rs"

[[test]]
name = "v0_commit_fill"
path = "tests/v0_commit_fill.rs"

[[test]]
name = "v0_execute_cross_slab"
path = "tests/v0_execute_cross_slab.rs"

[[test]]
name = "fuzz_instructions"
path = "tests/fuzz_instructions.rs"

[[test]]
name = "chaos_soak"
path = "tests/chaos_soak.rs"

[[test]]
name = "benchmark_cu"
path = "tests/benchmark_cu.rs"

[[test]]
name = "integration_multi_slab"
path = "tests/integration_multi_slab.rs"

[profile.dev]
panic = "abort"

[profile.test]
panic = "unwind"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
opt-level = 3
overflow-checks = true

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
