[package]
name = "percolator-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tools for Percolator Protocol LP operations"
license = "MIT"
repository = "https://github.com/dc199411/percolator"

[[bin]]
name = "percolator"
path = "src/main.rs"

[dependencies]
# SDK
percolator-sdk = { path = "../sdk/rust" }

# Solana
solana-sdk = "2.2"
solana-client = "2.2"
spl-token = "7.0"
spl-associated-token-account = "6.0"

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
bs58 = "0.5"
chrono = "0.4"
tabled = "0.17"
