[package]
name = "percolator-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for Percolator Protocol - Solana perpetual futures DEX"
license = "MIT"
repository = "https://github.com/dc199411/percolator"
keywords = ["solana", "perpetual", "futures", "dex", "defi"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
# Solana dependencies
solana-sdk = "2.2"
solana-client = "2.2"
solana-program = "2.2"
spl-token = "7.0"
spl-associated-token-account = "6.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
borsh = "1.5"
bytemuck = { version = "1.21", features = ["derive"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
devnet = []
mainnet = []
